# GMU

./: .gitignore  LICENSE  LICENSE.md  Licence_GMU.rtf  README.md  README.rtf  package-info.json
source/: CMakeLists.txt
source/bargraf~/: bargraf~.c  bargraf~.maxhelp
source/bufGranul~/: bufGranul2~.c  bufGranul2~.h  bufGranul2~_DSP.c  bufGranul~.maxhelp
source/bufGranul~/bufGranul~.mxo/Contents/: Info.plist
source/bufGranul~/bufGranul~.mxo/Contents/MacOS/: bufGranul~
source/bufGranul~/bufGranul~.mxo/Contents/Resources/: maxmspsdk.xcconfig
source/bufGranul~/bufGranul~.xcodeproj/: charles.mode1  charles.mode1v3  charles.pbxuser  project.pbxproj
source/bufGranul~/bufGranul~.xcodeproj/.svn/: entries
source/bufGranul~/bufGranul~.xcodeproj/.svn/text-base/: charles.pbxuser.svn-base  (+1 more)
source/bufGranul~/bufGranul~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/idleubutton/: CMakeLists.txt  idleubutton.c
source/idleubutton/idleubutton.mxo/Contents/: Info.plist
source/idleubutton/idleubutton.xcodeproj/: charles.pbxuser  leo.mode1v3
source/idleubutton/idleubutton.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/liveGranul~/: Info.plist  LiveGranul~.c  liveGranul~.maxhelp
source/liveGranul~/liveGranul~.xcodeproj/: charles.mode1
source/liveGranul~/liveGranul~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/mc.bufGranul~/: mc.bufGranul2~.c  mc.bufGranul2~.h  mc.bufGranul2~_DSP.c
source/mc.liveGranul~/: mc.LiveGranul~.c
source/mc.synGranul~/: CMakeLists.txt  mc.SynGranul~.c
source/rand_dist_list/: rand_dist_list.c  rand_dist_list.maxhelp
source/rand_dist_list/rand_dist_list.xcodeproj/: charles.mode1  charles.pbxuser  project.pbxproj
source/rand_dist_list/rand_dist_list.xcodeproj/.svn/: entries
source/rand_dist_list/rand_dist_list.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/rand_dist_list~/: rand_dist_list~.c  rand_dist_list~.maxhelp
source/rand_dist_list~/rand_dist_list~.xcodeproj/: charles.pbxuser  project.pbxproj
source/rand_dist_list~/rand_dist_list~.xcodeproj/.svn/: entries
source/rand_dist_list~/rand_dist_list~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/ref/depoly/: EPSPlot.h  de.h  detest.cpp  polyeval.h
source/synGranul~/: Info.plist  SynGranul~.c
source/synGranul~/SynGranul~.xcodeproj/: project.pbxproj
source/synGranul~/synGranul~.mxo/Contents/: Info.plist
(+152 files in other folders)
